--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
+    "ng2-smart-table": "^1.2.2",
     "rxjs": "^5.5.6",
+    "underscore": "^1.8.3",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
